# Dhaaga

./: .gitignore  README.md  metadata.json  package-lock.json  package.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  dependencies.py  errors.py  kids_age.py  main.py  security.py
backend/app/db/: base.py  connection.py
backend/app/llm/: extension_provider.py  fallback.py  gemini_provider.py  groq_provider.py  intent_prompt.py  openai_provider.py  provider.py
backend/app/nlp/: __init__.py  apparel_classification.py  colors.py  diff_merge.py  fast_path_classifier.py  garments.py  keyword_matcher.py  pakistani_events.py  product_semantics.py
backend/app/repositories/: __init__.py  brand_repo.py  chat_repo.py  collections_repo.py  device_repo.py  events_repo.py  query_cache_repo.py  user_repo.py  wishlist_repo.py
backend/app/routers/: auth.py  brands.py  collections.py  devices.py  extension.py  products.py  session.py  voice.py  wishlist.py
backend/app/schemas/: auth.py  brand.py  collection.py  device.py  extension.py  product.py  session.py  wishlist.py
backend/app/services/: alternatives_service.py  collections_service.py  extension_catalog_service.py  extension_search_service.py  live_product_service.py  search_service.py  (+2 more)
backend/migrations/: env.py  script.py.mako  seed_data.py
backend/seed/: brands_seed.json  collections_seed.json  seed_brands.py  seed_collections.py
backend/tests/: conftest.py  test_phase3_services.py  test_product_cache_service.py  test_security.py  test_shopify_mapper.py
(+88 files in other folders)
